Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -151,8 +151,9 @@ University of Eindhoven\\
 \section*{\textbf{Introduction}}
 \addcontentsline{toc}{section}{Introduction}
 
-
-
+\begin{theorem}
+lol
+\end{theorem}
 
 \newpage
 
